Bug Fix | Campus Header | Utility spacing

--- a/src/modules/header-campus/_style.scss
+++ b/src/modules/header-campus/_style.scss
@@ -138,7 +138,6 @@ $wsu-space--logo: $wsu-spacing--medium;
 }
 
 .wsu-header-global ~ .wsu-header-campus .wsu-header-campus__utility-options {
-    margin-top: -35px;
 
     .wsu-header-utility-bar {
         position: relative;
